<resources>
    <string name="app_name">TicTacToe</string>

    <string name="info">info</string>
    <string name="zero">zero</string>

    <string name="difficulty_choose">Choose a difficulty level:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_expert">Expert ( Try me.. )</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_menu">Difficulty</string>
    <string name="quit_menu">Quit</string>
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>

    <string name="no">No</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="new_game">New Game</string>
    <string name="difficulty">Difficulty</string>
    <string name="quit">Quit</string>
    <string name="first_computer">Android Goes First</string>
    <string name="first_human">You go first.</string>
    <string name="SinglePlayer">SinglePlayer</string>


    <!--Whose Turn -->
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="turn_player1">It\'s your turn</string>
    <string name="turn_player2">Wait for the other player\'s move </string>


    <!--Labels-->
    <string name="score_label_human">Human</string>
    <string name="score_label_tie">Tie</string>
    <string name="score_label_computer">Computer</string>
    <string name="score_label_player1">Player 1</string>
    <string name="score_label_player2">Player 2</string>


    <!--Buttons-->
    <string name="login_btn">Login</string>
    <string name="sign_out_menu_button">Sign Out</string>
    <string name="singleButton">SinglePlayer</string>
    <string name="multiButton">MultiPlayer</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="create_game">Create</string>
    <string name="join_game">join</string>
</resources>