<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginTop="20dp"
    tools:context="co.edu.unal.tictactoe_online.Multiplayer">


    <TableLayout
        android:layout_width="@dimen/size_game_board"
        android:layout_height="@dimen/size_game_board"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"

        android:background="@drawable/board2"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            >

            <ImageView
                android:id="@+id/iv_11"
                android:layout_margin="3dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>

            <ImageView
                android:id="@+id/iv_12"

                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="3dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>

            <ImageView
                android:id="@+id/iv_13"
                android:layout_margin="3dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp" >

            <ImageView
                android:id="@+id/iv_21"

                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>

            <ImageView
                android:id="@+id/iv_22"

                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>

            <ImageView
                android:id="@+id/iv_23"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp">

            <ImageView
                android:id="@+id/iv_31"

                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>

            <ImageView
                android:id="@+id/iv_32"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>

            <ImageView
                android:id="@+id/iv_33"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/size_player_sign_image"
                android:layout_height="@dimen/size_player_sign_image"
                android:onClick="GameBoardClick"/>
        </TableRow>
    </TableLayout>



    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="10dp">

        <TableRow>

            <TextView
                android:id="@+id/player_score_label"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/score_label_human"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tie_score_label"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/score_label_tie"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/computer_score_label"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:gravity="right"
                android:text="@string/score_label_computer"
                android:textSize="20sp">

            </TextView>

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/player_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/zero"
                android:textColor="#5d49ff"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tie_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/information"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/tie_score_label"
                android:gravity="left"
                android:text="@string/zero"
                android:textColor="#5d49ff"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/computer_score"
                android:layout_below="@+id/information"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="10dp"
                android:text="@string/zero"
                android:textColor="#5d49ff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>


            <TextView
                android:id="@+id/information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/info"
                android:textSize="20sp" />

    </TableLayout>
</RelativeLayout>

